# mcp-rs

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitignore.security  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION_INTEGRATION_SUMMARY.md  Dockerfile  Dockerfile.operator  Dockerfile.test  LICENSE-APACHE  MYSQL_PHASE1_SUMMARY.md  POSTGRES_BENCHMARKING_GUIDE.md  POSTGRES_DATABASE_TESTING_GUIDE.md  PR_CREATION_CHECKLIST.md  PR_DESCRIPTION.md  PR_DESCRIPTION_MYSQL_PHASE1.md  PR_MANAGEMENT.md  PULL_REQUEST_DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  README.ja.md  README.md  RELEASE_NOTES.md  ROADMAP.md  ROLLBACK_DESIGN_SPEC.md  SECURE_PLUGIN_ARCHITECTURE.md  SECURITY_IMPLEMENTATION_EXAMPLES.md  TEST_ANALYSIS.md  TEST_REPORT.md  VERSION_MANAGEMENT.md  WORDPRESS_BLOG_SERVICE_GUIDE.md  WORDPRESS_PERMISSIONS.md  _config.yml  claude_desktop_config_example.json  clippy.toml  (+25 more)
.cargo/: audit.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  setup.sh  start-dev.sh
.github/: AUTOMATION_OPERATIONS_GUIDE.md  EPIC_ISSUE_TEMPLATE.md  FILE_MANAGEMENT.md  GITHUB_FOLDER_GUIDE.md  GITHUB_PROJECTS_INTEGRATION.md  GITHUB_PROJECTS_SETUP.md  IMMEDIATE_SETUP_STEPS.md  MILESTONE_CREATION_GUIDE.md  POST_PROJECT_CREATION_SETUP.md  PROJECTS_MANUAL_SETUP.md  PROJECT_CREATION_COMMANDS.md  PROJECT_SETUP.md  PROJECT_VISIBILITY_RECOMMENDATION.md  PR_MANAGEMENT.md  PULL_REQUEST_TEMPLATE.md  README.ja.md  README.md  ROADMAP_UPDATE_TEMPLATE.md  SETUP_COMPLETION_CHECKLIST.md  add-issues-to-project-detailed.ps1  add-issues-to-project.ps1  topics.txt
.trunk/: trunk.yaml
benches/: POSTGRES_BENCHMARKS_README.md  README.md  database_engine_performance_comparison.rs  mcp_protocol.rs  mysql_concurrent_connection_performance.rs  mysql_parameterized_query_performance.rs  mysql_performance_benchmark.rs  mysql_resource_usage_analysis.rs  mysql_security_overhead.rs  performance_test_execution_analysis.rs  plugin_isolation_benchmark.rs  policy_hot_reload_bench.rs  policy_performance_bench.rs  postgres_phase2_benchmarks.rs  session_benchmarks.rs  websocket_benchmarks.rs
config/: mcp-rs.toml
configs/: README.md
demo-policies/: README.md  mcp-policy.json  realtime-editing-security-policy.md  realtime-editing-security.toml  security-policy-new.toml  security-policy.toml  wordpress-policy.yaml
docs/: AI_AGENT_MEMO.md  CONTAINER_INTEGRATION_TESTS.md  DOCKER_GUIDE.md  DOCKER_POSTGRES_GUIDE.md  EPIC_15_COMPLETION_REPORT.md  KUBERNETES_GUIDE.md  PHASE2_POSTGRES_PLAN.md  PHASE3_COMPLETION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  RBAC.md  README.md  RUNTIME_TRANSPORT_SWITCHING.md  SECURE_CORE_DEPLOYMENT_STRATEGY.md  abuseipdb-provider-guide.md  admin-bypass-rest-api-analysis.md  architecture.md  cve-provider-guide.md  data-masking-engine.md  database-availability-guide.md  database-security-enhancement-plan.md  deployment-guide.md  docker-runtime-guide.md  dynamic-database-switching-design.md  gdpr-ccpa-compliance.md  ids-implementation.md  llm-integration-guide.md  llm-integration.md  maintenance-mode-compatibility.md  mitre-attack-provider-guide.md  ml-anomaly-detection.md  mongodb-implementation-design.md  monitoring-system.md  mysql-phase1-guide.md  plugin-developer-guide.md  plugin-investigation-results.md  plugin-security-guide.md  plugin-system.md  plugin-troubleshooting-guide.md  redis-implementation-design.md  security-plugins-compatibility.md  (+17 more)
examples/: abuseipdb_demo.rs  api_endpoint_diagnosis.rs  auth_diagnosis.rs  authentication_api_demo.rs  authentication_middleware_demo.rs  axum_websocket_server.rs  basic_auth_test.rs  basic_server.rs  basic_session_usage.rs  canary_deployment_demo.rs  column_encryption_demo.rs  comprehensive_test.rs  content_generation_demo.rs  cve_demo.rs  dashboard_demo.rs  data_masking_advanced_demo.rs  data_masking_demo.rs  dynamic_transport_demo.rs  http_timeout_test.rs  ids_demo.rs  integrated_policy_demo.rs  interactive_setup_test.rs  jwt_auth_test.rs  keyboard_test.rs  llm_integration_demo.rs  mfa_backup_codes_demo.rs  mfa_device_trust_demo.rs  mfa_session_demo.rs  mfa_sms_demo.rs  mfa_totp_demo.rs  mitre_attack_demo.rs  ml_anomaly_demo.rs  monitoring_demo.rs  mysql_engine_test.rs  nlp_query_demo.rs  performance_optimization_demo.rs  plugin_isolation_demo.rs  policy_config_demo.rs  policy_hot_reload_demo.rs  policy_validation_demo.rs  (+56 more)
examples.disabled/: mysql_engine_test.rs  websocket_origin_validation_demo.rs  websocket_session_demo.rs
examples/sample_plugin/: Cargo.toml  plugin.toml
examples/sample_plugin/src/: lib.rs
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml
mcp-rs-v0.15-release/: .env.example  AI_AGENT_SETUP_GUIDE.md  LICENSE-APACHE  LICENSE-MIT  QUICK_REFERENCE.md  RELEASE_README.md
mcp-rs-v0.15.1-release/: RELEASE_README.md  claude_desktop_config_example.json  start-claude-mcp-server.bat  start-claude-mcp-server.ps1  start-http-mcp-server.bat  test-categories-stdio.ps1  test-http-categories.ps1  update-claude-config.ps1
migrations/: 001_create_users_table.sql  README.md
project-docs/: CLAUDE_DESKTOP_INTEGRATION.md  api-reference.md  architecture.md  database-guide.md  dynamic-database-switching.md  index.md  realtime-editing-development-guide.md  security-guide.md  wordpress-guide.md
reports/: README.md  database-integration-assessment-report.md  database-security-implementation-report.md  performance-test-results.md  realtime-editing-implementation-report.md  security-audit-report.md
scripts/: run-integration-tests.ps1  run-integration-tests.sh  setup-docker-security.sh  test-abuseipdb.ps1  test-virustotal.ps1
src/: client.rs  config.rs  error.rs  http_server.rs  lib.rs  logging.rs  main.rs  main_old.rs  mcp_server.rs  policy_application.rs  policy_config.rs  policy_validation.rs  policy_watcher.rs  protocol.rs  runtime_control.rs  server.rs  types.rs
static/: demo.html
test_policies_validation/: invalid_policy.toml  production_policy.toml  valid_policy.toml
tests.disabled/: README.md  integration_tests.rs  run-tests.ps1  (+2 more)
(+585 files in other folders)
