[package]
name = "mcp-rs"
version = "0.15.0"
edition = "2021"
authors = ["n-takatsu"]
description = "Rust implementation of the Model Context Protocol (MCP) for AI-agent integration with Canary Deployment System"
license = "MIT OR Apache-2.0"
repository = "https://github.com/n-takatsu/mcp-rs"

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Web framework and HTTP
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Database and storage  
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"], default-features = false }
# MySQL support via secure alternative (RSA vulnerability-free)
mysql_async = { version = "0.36", optional = true }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"], optional = true }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Cryptography and security
ring = "0.17"
argon2 = "0.5"
jsonwebtoken = "9.3"
base64 = "0.22"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1.8"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"

# Network and IP handling
ipnet = "2.9"
hickory-resolver = { version = "0.24", optional = true }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Validation  
validator = { version = "0.19", features = ["derive"] }
regex = "1.10"
url = "2.5"
ammonia = "4.0"
fancy-regex = "0.13"

# Rate limiting
governor = "0.6"

# Metrics and monitoring
prometheus = { version = "0.14", optional = true }
metrics = { version = "0.23", optional = true }

# WebSocket
tungstenite = "0.24"
tokio-tungstenite = "0.24"

# File system monitoring
notify = "6.1"

# TUI Dashboard (temporarily disabled to avoid paste dependency)
# ratatui = { version = "0.29", optional = true, default-features = false }
# crossterm = { version = "0.27", optional = true }
# tui-input = { version = "0.8", optional = true }

# Plugin system
libloading = "0.8"

# Testing utilities
mockall = { version = "0.13", optional = true }
[dev-dependencies]
# Testing framework
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tempfile = "3.12"

# Mock data generation
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
rand = "0.8"

[features]
default = ["session-management", "security", "websocket"]

# Core features
session-management = []
security = []
websocket = []
mcp-protocol = []
database = []

# Storage backends
redis-backend = ["redis"]
mysql-backend = ["mysql_async"]
postgresql = []
sqlite = []

# TUI Dashboard (temporarily disabled)
# tui = ["ratatui", "crossterm", "tui-input"]

# Monitoring and metrics
metrics = ["prometheus", "dep:metrics"]

# Development and testing
testing = ["mockall"]
integration-tests = []

# Performance optimizations
simd = []

# Full feature set (MySQL restored via secure mysql_async)
full = [
    "session-management",
    "security", 
    "websocket",
    "mcp-protocol",
    "redis-backend",
    "mysql-backend",
    "postgresql",
    "sqlite",
    "metrics",
    "testing"
]

[[example]]
name = "mysql_engine_test"
required-features = ["database", "mysql-backend"]

# Temporarily disabled due to API changes
# [[bench]]
# name = "session_benchmarks"
# harness = false



[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
opt-level = 1
debug = true

[profile.bench]
opt-level = 3
debug = false
lto = true

# Security: Exclude problematic dependencies
[package.metadata.audit.ignore]
"RUSTSEC-2023-0071" = "RSA crate - no fix available, consider removing MySQL support"
"RUSTSEC-2024-0436" = "paste crate - unmaintained but required by ratatui"
