[package]
name = "mcp-rs"
version = "0.15.0"
edition = "2021"
authors = ["n-takatsu"]
description = "Rust implementation of the Model Context Protocol (MCP) for AI-agent integration with Canary Deployment System"
license = "MIT OR Apache-2.0"
repository = "https://github.com/n-takatsu/mcp-rs"

[dependencies]
# Core async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7.17"
futures = "0.3.31"

# Web framework and HTTP
axum = { version = "0.8", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.7", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10"
toml = "0.9.8"

# Database and storage (PostgreSQL and SQLite only - MySQL via mysql_async)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"], default-features = false }
# MySQL support via secure alternative (RSA vulnerability-free)
mysql_async = { version = "0.36", optional = true }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"], optional = true }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.18", features = ["v4", "serde"] }

# Random number generation (for benchmarks and testing)
rand = "0.8"

# Testing dependencies
log = "0.4"
env_logger = "0.11"

# Cryptography and security
ring = "0.17.14"
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = { version = "10.2", default-features = false, features = ["rust_crypto"] }
base64 = "0.22.1"
secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = "1.8.2"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"

# MFA (Multi-Factor Authentication)
totp-rs = { version = "5.6", features = ["gen_secret", "qr"], optional = true }
qrcode = { version = "0.14", optional = true }

# Network and IP handling
ipnet = "2.11"
hickory-resolver = { version = "0.24.4", optional = true }

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# Configuration
config = "0.15.18"
clap = { version = "4.5.51", features = ["derive", "env"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"
async-trait = "0.1.89"

# HTTP client
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Validation
validator = { version = "0.20", features = ["derive"] }
regex = "1.12"
url = "2.5.7"
ammonia = "4.1.2"
fancy-regex = "0.16.2"

# Rate limiting
governor = "0.10.1"

# Metrics and monitoring
prometheus = { version = "0.14", optional = true }
metrics = { version = "0.24.2", optional = true }

# WebSocket
tungstenite = "0.28"
tokio-tungstenite = "0.28"

# File system monitoring
notify = "8.2"

# TUI and terminal handling
crossterm = "0.27"
# ratatui = { version = "0.29", optional = true, default-features = false }
# tui-input = { version = "0.8", optional = true }

# Plugin system
libloading = "0.9"

# Testing utilities
mockall = { version = "0.13.1", optional = true }
[dev-dependencies]
# Testing framework
tokio-test = "0.4.4"
tempfile = "3.23"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Optional heavy dependencies (commented out to reduce CI load)
# proptest = "1.9"
# fake = { version = "4.4", features = ["derive", "chrono", "uuid"] }
# rand = "0.8.5"

[features]
default = ["session-management", "security", "websocket"]

# Core features
session-management = []
security = []
websocket = []
mcp-protocol = []
database = ["mysql-backend", "postgresql-backend"]

# MFA (Multi-Factor Authentication)
mfa = ["totp-rs", "qrcode"]
mfa-full = ["mfa"]

# Storage backends
redis-backend = ["redis"]
mysql-backend = ["mysql_async"]
postgresql-backend = []
sqlite = []

# TUI Dashboard (temporarily disabled)
# tui = ["ratatui", "crossterm", "tui-input"]

# Monitoring and metrics
metrics = ["prometheus", "dep:metrics"]

# Development and testing
testing = ["mockall"]
integration-tests = []

# Performance optimizations
simd = []

# Full feature set (MySQL restored via secure mysql_async)
full = [
    "session-management",
    "security",
    "websocket",
    "mcp-protocol",
    "redis-backend",
    "mysql-backend",
    "postgresql-backend",
    "sqlite",
    "metrics",
    "testing"
]

# Examples temporarily disabled for CI stability
# Enable locally with: cargo build --examples
# [[example]]
# name = "mysql_engine_test"
# required-features = ["database", "mysql-backend"]

# WordPress examples (for demonstration and learning)
# [[example]]
# name = "wordpress_categories_tags_test"

# [[example]]
# name = "wordpress_blog_service_demo"

# [[example]]
# name = "wordpress_api_test"

# [[example]]
# name = "wordpress_advanced_post_test"

# [[example]]
# name = "wordpress_embed_test"

# [[example]]
# name = "wordpress_media_crud_test"

# [[example]]
# name = "wordpress_health_check"

# [[example]]
# name = "wordpress_posts_with_taxonomy_test"

# [[example]]
# name = "wordpress_post_crud_test"

# [[example]]
# name = "wordpress_security_diagnosis"

# [[example]]
# name = "wordpress_security_integration"

# Temporarily disabled due to API changes
# [[bench]]
# name = "session_benchmarks"
# harness = false

# Disable integration tests for CI stability



[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
opt-level = 0
debug = false
incremental = true

[profile.bench]
opt-level = 3
debug = false
lto = true

# Security: Exclude resolved dependencies
[package.metadata.audit.ignore]
"RUSTSEC-2023-0071" = "RSA crate from sqlx-mysql (unused) - MySQL support provided by secure mysql_async v0.36.1"
"RUSTSEC-2024-0436" = "paste crate - unmaintained but required by ratatui (currently disabled)"

# MFA examples require the mfa feature
[[example]]
name = "mfa_totp_demo"
required-features = ["mfa"]

[[example]]
name = "mfa_sms_demo"
required-features = ["mfa"]

[[example]]
name = "mfa_session_demo"
required-features = ["mfa"]

[[example]]
name = "mfa_device_trust_demo"
required-features = ["mfa"]

[[example]]
name = "mfa_backup_codes_demo"
required-features = ["mfa"]

# MFA tests require the mfa feature
[[test]]
name = "mfa_integration_tests"
required-features = ["mfa"]

[[test]]
name = "mfa_performance_tests"
required-features = ["mfa"]
