[package]
name = "sample_plugin"
version = "1.0.0"
edition = "2021"
authors = ["MCP-RS Team"]
description = "Sample plugin for mcp-rs demonstration"
license = "MIT OR Apache-2.0"

[dependencies]
mcp-rs = { path = "../../", features = [] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["macros", "rt"] }

[lib]
crate-type = ["cdylib", "rlib"]